# statistics-for-data

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  guia.py  instrucoes.md  pyproject.toml  run_loaders.py  tasks.py
.github/workflows/: ci.yml
notebooks/01_probability/: binomial_abtest.ipynb  normal_distribution.ipynb  poisson_counts.ipynb
notebooks/02_hypothesis_tests/: anova_iris_species.ipynb  chi_square_titanic.ipynb  ttest_ab_campaign.ipynb
notebooks/03_regression/: linear_california_housing.ipynb  logistic_telco_churn.ipynb
src/data/: loaders.py  preprocess.py
src/features/: engineering.py
src/models/: evaluate.py  train.py
src/stats/: hypothesis.py  probability.py
src/viz/: plots.py
tests/: test_hypothesis.py  test_loaders.py  test_models_evaluate.py  test_probability.py
